2008-10-06  Anders Carlsson  <andersca@apple.com>

        Reviewed by David Hyatt.

        Convert more methods over to C++.
        
        * Plugins/WebBaseNetscapePluginStream.h:
        * Plugins/WebBaseNetscapePluginStream.mm:
        (WebNetscapePluginStream::reasonForError):
        (WebNetscapePluginStream::destroyStreamWithReason):
        (WebNetscapePluginStream::cancelLoadWithError):
        (-[WebBaseNetscapePluginStream cancelLoadWithError:]):
        (WebNetscapePluginStream::destroyStreamWithError):
        (-[WebBaseNetscapePluginStream destroyStreamWithError:]):
        (-[WebBaseNetscapePluginStream cancelLoadAndDestroyStreamWithError:]):
        (-[WebBaseNetscapePluginStream _deliverDataToFile:]):
        (-[WebBaseNetscapePluginStream finishedLoading]):
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView webFrame:didFinishLoadWithError:]):

2008-10-04  Darin Adler  <darin@apple.com>

        Reviewed by Cameron Zwarich.

        - https://bugs.webkit.org/show_bug.cgi?id=21295
          Bug 21295: Replace ExecState with a call frame Register pointer

        * WebView/WebScriptDebugger.mm:
        (WebScriptDebugger::WebScriptDebugger): Remove 0 passed for ExecState.

2008-10-03  John Sullivan  <sullivan@apple.com>

        Fixed Release build

        * Plugins/WebBaseNetscapePluginStream.mm:
        (WebNetscapePluginStream::destroyStream):
        added !LOG_DISABLED guard around declaration of npErr used only in LOG

2008-10-03  Anders Carlsson  <andersca@apple.com>

        Reviewed by David Hyatt.
        
        Convert destroyStream over to C++.
        
        * Plugins/WebBaseNetscapePluginStream.h:
        * Plugins/WebBaseNetscapePluginStream.mm:
        (WebNetscapePluginStream::destroyStream):
        (-[WebBaseNetscapePluginStream _destroyStreamWithReason:]):
        (-[WebBaseNetscapePluginStream _deliverData]):

2008-10-03  Anders Carlsson  <andersca@apple.com>
